feat: separate reweights into days